--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     height: 5em;
     width: 5em;
     background-color: black;
+    color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 3px;
     
 } 
 /* Making squares wrap */
@@ -10,3 +15,8 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.square:hover {
+    color: white;
+}
+
